fix routers and trade for aws
